tests/ui/error-codes/E0583.stderr
error[E0583]: file not found for module `module_that_doesnt_exist`
  --> $DIR/E0583.rs:1:1
   |
LL | mod module_that_doesnt_exist;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `module_that_doesnt_exist`, create file "$DIR/module_that_doesnt_exist.rs" or "$DIR/module_that_doesnt_exist/mod.rs"
   = note: if there is a `mod module_that_doesnt_exist` elsewhere in the crate already, import it with `use crate::...` instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0583`.
