tests/ui/error-codes/E0583.rs
mod module_that_doesnt_exist; //~ ERROR E0583

fn main() {
}
